# -face-recognition-frontend

./: .gitignore  Dockerfile  README.md  config.toml  main.py  pyproject.toml  requirements.txt  scheme.py
.streamlit/: config.toml
