[tool.poetry]
name = "face-recognition-frontend"
version = "0.1.0"
description = ""
authors = ["Shakirov Renat <renatshk@gmail.com>"]
readme = "README.md"
packages = [{include = "face_recognition_frontend"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
streamlit = "^1.21.0"
watchdog = "^3.0.0"
opencv-python = "^4.7.0.72"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
